samples/_failures_safe/1761536294_afc0a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_118cb128.c: In function ‘main’:
./samples/SAFE/__tmp_118cb128.c:168:19: error: expected ‘)’ at end of input
  168 |     free_matrix(&b
      |                ~  ^
      |                   )
./samples/SAFE/__tmp_118cb128.c:168:5: error: expected declaration or statement at end of input
  168 |     free_matrix(&b
      |     ^~~~~~~~~~~
